[gd_scene load_steps=3 format=3 uid="uid://c1jpd7fkoflqd"]

[ext_resource type="Theme" uid="uid://bvbefu2r37b7v" path="res://resources/tinyalch_main_theme.tres" id="1_fy00u"]
[ext_resource type="Script" path="res://scenes/menus/level_progress_menu.gd" id="2_g441r"]

[node name="LevelProgressMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fy00u")
script = ExtResource("2_g441r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.5
offset_top = -65.0
offset_right = 139.5
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="LevelStatus" type="Label" parent="VBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "You Died / Level Completed"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Continue" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Continue"

[node name="Restart" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Restart"

[node name="Quit" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Quit
"

[node name="DataContainer" type="PanelContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 130)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/DataContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/DataContainer/MarginContainer"]
layout_mode = 2

[node name="Time" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer/DataContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Time"

[node name="Kills" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer/DataContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Kills"

[node name="DamageTaken" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer/DataContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Damage Taken"

[node name="TimesDetected" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer/DataContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Times Detected"

[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/ButtonsContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/ButtonsContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/ButtonsContainer/Quit" to="." method="_on_quit_pressed"]
